style.css
html {
    font-family: sans-serif;
}

body {
    background-image: url(https://images.unsplash.com/photo-1553106364-741d67315829?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80);
    background-repeat: no-repeat;
    background-size: cover, contain;
}

div.title {
    padding: 4rem;
    display: flex;
    text-align: center;
}

p.title-text {
    opacity: 0.7;
    font-size: 1.3rem;
    font-weight: bolder;
    background-color: rgba(245, 167, 167, 0.8);
    padding: 1rem;
    flex: 1;
}

.title-header {
    flex: 2;
    font-family: 'Anton', sans-serif;
    justify-content: space-around;
    color: white;
    margin: auto;
    font-size: 6rem;
}

div.content {
    font-size: 1.1rem;
    background-color: rgba(170, 184, 255, 0.8);
    padding: 2rem;
    font-weight: bold;
}

.content {
    opacity: 0.8;
    border-color: purple;
    margin-left: 22%;
    width: 50%;
}
.card1 {
    margin: 15px;

    height: 330px;
    border: 1px solid black;
    display: inline-block;
    width: 300px;
    box-shadow: 0 0 5px 2px rgba(206, 5, 5, 0.5)
    }

.card1:hover {
    box-shadow: 0 0 5px 2px rgba(7, 240, 22, 0.8);
}
.card2 {
    margin: 15px;

    height: 330px;
    border: 1px solid black;
    display: inline-block;
    width: 300px;
    box-shadow: 0 0 5px 2px rgba(206, 5, 5, 0.5)
    }
.card2:hover {
        box-shadow: 0 0 5px 2px rgba(7, 240, 22, 0.8);
    }
.card3 {
    margin: 15px;

    height: 330px;
    border: 1px solid black;
    display: inline-block;
    width: 300px;
    box-shadow: 0 0 5px 2px rgba(206, 5, 5, 0.5)
}
.card3:hover {
    box-shadow: 0 0 5px 2px rgba(7, 240, 22, 0.8);
}

.bottom-half {
    justify-content: space-evenly;
    display: flex;
    
}

.header-image {
    transform: scaleX(-1);
    background-image: url(https://art.pixilart.com/cf2ce78e0d63d75.gif);
    background-size: 100% 100%;
    height: 48%;
}
.header-image2 {
    background-image: url(./2148af628b44891.gif);
    background-size: 100% 100%;
    height: 48%;
}
.header-image3 {
    background-image: url(https://art.pixilart.com/cf2ce78e0d63d75.gif);
    background-size: 100% 100%;
    height: 48%;
}

.card-text {
    text-align: center;
    font-weight: bold;
    margin-top: 0px;
    height: 55%;
    background-color: rgb(247, 242, 242);
}

a {
    color: rgb(245, 89, 89);
    text-decoration: underline;
}

.page1body {
    background-image: url(https://images.unsplash.com/photo-1542850513-cb528bf20ddc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-repeat: no-repeat;
    background-size: cover;
}
.page1h1 {
    text-align: center;
    font-weight: bold;
    font-size: 4rem;
    color: white;
}
.img {
    height: 300px;
    width: 375px;
    box-shadow: 0 0 5px 2px rgb(255, 255, 255)
}

.page1-info {
    display: flex;
    color: black;
    font-weight: bolder;
    font-size: 1rem;
}

.page1-text {
    text-align: center;
    box-shadow: 0 0 5px 2px rgb(255, 255, 255);
    opacity: 0.9;
    margin-left: 35px;
    width: 375px;
    height: 50px;
    background-color: rgba(255, 255, 255, 0.849);
}
.page1-text2 {
    text-align: center;
    box-shadow: 0 0 5px 2px rgb(255, 255, 255);
    opacity: 0.9;
    margin-left: 35px;
    width: 375px;
    height: 50px;
    background-color: rgba(255, 255, 255, 0.849);
}
.page1-text3 {
    text-align: center;
    box-shadow: 0 0 5px 2px rgb(255, 255, 255);
    opacity: 0.9;
    margin-left: 35px;
    width: 375px;
    height: 50px;
    background-color: rgba(255, 255, 255, 0.849);
}

.page2-body {
    margin: auto;
    background-image: url(https://images.unsplash.com/photo-1513206057392-e565592cbaa6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-repeat: no-repeat;
    background-size: cover;
}

.card_layouts {
    width: 80%;
    margin: auto;
    /* display: grid;
    grid-template-columns: repeat(3, 1fr); */
}

.card-text-page2 {
    opacity: 0.8;
    text-align: center;
    font-weight: bold;
    margin-top: -1px;
    height: 25%;
    background-color: rgb(255, 249, 167);
}
.header-image-page2 {
    background-image: url(https://static.scientificamerican.com/sciam/cache/file/55211B07-3BD0-4943-9EB77934A07B7C2D_source.jpg?w=590&h=800&18BFC646-D509-40CD-AD80A4F44EA56F9C);
    background-size: 100% 100%;
    height: 80%;
}
.header-image-page2-1 {
    background-image: url(https://images.unsplash.com/photo-1494587416117-f102a2ac0a8d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-size: 100% 100%;
    height: 80%;
}
.header-image-page2-2 {
    background-image: url(https://images.unsplash.com/photo-1533304514136-3ed78add7277?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-size: 100% 100%;
    height: 80%;
}
.header-image-page2-3 {
    background-image: url(https://images.unsplash.com/photo-1490805981889-3fdd44cec18a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-size: 100% 100%;
    height: 80%;
}
.header-image-page2-4 {
    background-image: url(https://images.unsplash.com/photo-1524429656589-6633a470097c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-size: 100% 100%;
    height: 80%;
}

.body-image {
    background-image: url(https://images.unsplash.com/photo-1527603870404-36a7ee13972e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
    background-repeat: no-repeat;
    background-size: cover;
    position: sticky;
}


.timelinepic {
    justify-content: space-evenly;
    display: flex;
    
}

.timeline-img {
    height: 800px;
    width: 750px;
}

.steps {
    font-weight: bold;
    font-size: 1rem;
    position: sticky;
    opacity: 0.7;
    text-align: center;
}

.step1 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-top: -38.5rem;
    margin-left: 15rem;
}
.step2 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 45rem;
    margin-top: 2rem;
}

.step3 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 15rem;
    margin-top: 0.2rem;

}
.step4 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 45rem;
    margin-top: -1rem;

}
.step5 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 15rem;
    margin-top: 2rem;

}
.step6 {
    background-color: white;
    width: 25%;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 45rem;
    margin-top: -1.5rem;
}
.step-title {
    font-size: 1.4rem;
    text-decoration: underline;
    font-family: 'Allura', cursive;
}

.index-button {
    opacity: 0.8;
    box-shadow: 0 0 5px 4px rgb(252, 252, 250);
    margin-left: 35rem;
    font-size: 1.5rem;
    background-color: rgb(255, 255, 255);
    color: black;
}
.index-button2 {
    opacity: 0.8;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 35rem;
    font-size: 1.5rem;
    background-color: rgb(255, 255, 255);
    color: black;
}
.index-button3 {
    opacity: 0.8;
    box-shadow: 0 0 5px 4px rgb(223, 220, 81);
    margin-left: 35rem;
    font-size: 1.5rem;
    background-color: rgb(255, 255, 255);
    color: black;
}

